fix left nav hieght spill

--- a/public/themes/geo-map/css/ng.css
+++ b/public/themes/geo-map/css/ng.css
@@ -413,7 +413,7 @@
         }
 
         #vertical-scrollbar-demo {
-            height: 400px;
+            height: 353px;
         }
 
         .tab_divider {
